--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "nodemon": "^2.0.20",
     "slugify": "^1.3.4",
     "validator": "^10.11.0",
-    "xss-clean": "^0.1.1"
+    "xss-clean": "^0.1.1",
+    "cors": "^2.8.5"
   },
   "devDependencies": {
     "eslint": "^5.16.0",
